--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,28 @@
 .myContainer {
    height: 100vh;
-   display: flex;
-   justify-content: center;
-   align-items: center;
+
+   background-color: #ddd;
+}
+
+.box_content {
+   height: 200px;
+   width: 450px;
+
+   background-color: #fff;
+
+   border: 1px solid rgba(0,0,0,0.4);
+   border-radius: 10px;
+   box-shadow: 0px 0px 50px 23px rgba(0,0,0,0.2);
+}
+
+.content_numbers {
+   
+   box-shadow: 0px 20px 0px -10px #FFFFFF, 0px -20px 0px -10px #FFFFFF, 20px 0px 0px -10px #FFFFFF, -20px 0px 0px -10px #FFFFFF, 0px 0px 0px 10px #FF0000, 0px 0px 50px 23px rgba(0,0,0,0);
+}
+
+h1 {
+   margin: 6px 13px 13px;
+   padding: 10px;
+
+   box-shadow: 5px 5px 5px 0px #000000, inset 4px 4px 15px 0px #000000, 0px 0px 50px 23px rgba(0,0,0,0);
 }
