--- a/css/style.css
+++ b/css/style.css
@@ -17,12 +17,19 @@
 
 .content_numbers {
    
-   box-shadow: 0px 20px 0px -10px #FFFFFF, 0px -20px 0px -10px #FFFFFF, 20px 0px 0px -10px #FFFFFF, -20px 0px 0px -10px #FFFFFF, 0px 0px 0px 10px #FF0000, 0px 0px 50px 23px rgba(0,0,0,0);
+   box-shadow: 0px 20px 0px -10px #FFFFFF,
+               0px -20px 0px -10px #FFFFFF,
+               20px 0px 0px -10px #FFFFFF,
+               -20px 0px 0px -10px #FFFFFF,
+               0px 0px 0px 10px #FF0000,
+               0px 0px 50px 23px rgba(0,0,0,0);
 }
 
 h1 {
    margin: 6px 13px 13px;
    padding: 10px;
 
-   box-shadow: 5px 5px 5px 0px #000000, inset 4px 4px 15px 0px #000000, 0px 0px 50px 23px rgba(0,0,0,0);
+   box-shadow: 5px 5px 5px 0px #000000,
+               inset 4px 4px 15px 0px #000000,
+               0px 0px 50px 23px rgba(0,0,0,0);
 }
