--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 .box_content {
    height: 200px;
-   width: 450px;
+   width: 540px;
 
    background-color: #fff;
 
@@ -26,9 +26,12 @@
 }
 
 h1 {
-   margin: 6px 13px 13px;
-   padding: 10px;
+   width: 65px;
 
+   margin: 13px 12px 20px;
+   padding: 11px;
+
+   text-align: center;
    box-shadow: 5px 5px 5px 0px #000000,
                inset 4px 4px 15px 0px #000000,
                0px 0px 50px 23px rgba(0,0,0,0);
