--- a/css/style.css
+++ b/css/style.css
@@ -36,3 +36,7 @@ h1 {
                inset 4px 4px 15px 0px #000000,
                0px 0px 50px 23px rgba(0,0,0,0);
 }
+
+h1.strikes {
+   width: 422px;
+}
